--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # See: https://ascribe.axvr.uk
 *  text=auto  final-newline  expand-tab  tab-stop=2  trim-trailing-whitespace  eol=lf
+*.bass  linguist-language=Clojure
+bass/*  linguist-language=Clojure  vim-filetype=bass
